# Hexe

./: .gitignore  .travis.yml  CONFIGURATION.md  Cargo.toml  Icon.sketch  LICENSE-MIT  README.md  appveyor.yml  travis.sh
.github/: FUNDING.yml
hexe/: CHANGELOG.md  Cargo.toml
hexe/benches/: position.rs
hexe/src/: lib.rs  macros.rs  main.rs  position.rs  prelude.rs  table.rs  thread.rs  util.rs  zero.rs  zobrist.rs
hexe/src/engine/: limits.rs  mod.rs  thread.rs  uci.rs
hexe/src/engine/thread/: job.rs  mod.rs  pool.rs
hexe/src/mv/: mod.rs  vec.rs
hexe/src/position/: benches.rs  mod.rs  mv_gen.rs  state.rs
hexe/src/table/: benches.rs  mod.rs  tests.rs
hexe/src/zobrist/: mod.rs  tables.rs
hexe_bin/: Cargo.toml
hexe_bin/src/: main.rs
hexe_core/: CHANGELOG.md  Cargo.toml  build.rs
hexe_core/benches/: color.rs  piece.rs  square.rs
hexe_core/src/: bitboard.rs  castle.rs  castle_rights.rs  color.rs  consts.rs  ext.rs  fen.rs  iter.rs  lib.rs  macros.rs  misc.rs  multi_board.rs  piece.rs  prelude.rs  seg_board.rs  simd.rs  square.rs
hexe_core/src/bitboard/: carry_rippler.rs  dir.rs  impls.rs  masks.rs  mod.rs  tables.rs
hexe_core/src/bitboard/tables/: between.rs  line.rs  mod.rs
hexe_core/src/board/: mod.rs  multi_board.rs
hexe_core/src/board/bit_board/: benches.rs  carry_rippler.rs  masks.rs  mod.rs  subsets.rs
hexe_core/src/board/bitboard/: benches.rs  carry_rippler.rs  dir.rs  masks.rs  mod.rs
hexe_core/src/board/multi_board/: benches.rs  mod.rs  tests.rs
hexe_core/src/board/piece_map/: benches.rs  entry.rs  iter.rs  mod.rs  tests.rs
hexe_core/src/castle/: mod.rs  tables.rs
hexe_core/src/magic/: mod.rs  tables.rs
hexe_core/src/magic/tables/: magics.rs  mod.rs  rays.rs
hexe_core/src/misc/: dir.rs  extract.rs  mod.rs
hexe_core/src/mv/: benches.rs  mod.rs  tests.rs  vec.rs
hexe_core/src/piece/: benches.rs  map.rs  mod.rs
hexe_core/src/piece/map/: benches.rs  count.rs  entry.rs  iter.rs  mod.rs
hexe_core/src/square/: benches.rs  mod.rs  squares.rs  tables.rs  tests.rs
hexe_core/src/square/magic/: mod.rs  tables.rs
hexe_core/src/util/: bytes.rs  count.rs  mod.rs
