[package]
name = "hexe"
version = "0.0.1"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
repository = "https://github.com/hexe-rs/Hexe"
description = "A chess engine."
documentation = "https://docs.rs/hexe"
keywords = ["chess", "engine", "ai", "magic"]
include = ["Cargo.toml", "src/**/*.rs", "README*", "CHANGELOG*", "LICENSE*"]

[lib]
name = "hexe"

[[bin]]
name = "hexe"

[badges]
travis-ci = { repository = "hexe-rs/Hexe" }
appveyor  = { repository = "hexe-rs/Hexe" }

[dependencies]
hexe_core    = { path = "../hexe_core", version = "0.0.1" }
num_cpus     = { version = "1.0" }
uncon        = { version = "1.1.0" }
uncon_derive = { version = "1.1.1" }

rand = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.4"
static_assertions = "0.2"

[build-dependencies]
version_check = "0.1"

[features]
serde = ["hexe_core/serde"]
simd  = ["hexe_core/simd"]
