[package]
name = "hexe"
version = "0.0.4"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/hexe-rs/Hexe"
description = "A chess engine."
documentation = "https://docs.rs/hexe"
keywords = ["chess", "engine", "ai", "magic"]
include = ["Cargo.toml", "src/**/*.rs", "README*", "CHANGELOG*", "LICENSE*"]

[lib]
name = "hexe"

[[bin]]
name = "hexe"

[badges]
travis-ci = { repository = "hexe-rs/Hexe" }
appveyor  = { repository = "nvzqz/Hexe" }

[dependencies]
hexe_core         = { version = "0.0.4", path = "../hexe_core" }
rand              = { version = "0.4.0", optional = true }
num_cpus          = "1.0.0"
scoped_threadpool = "0.1"
uncon             = "1.1.0"

[dev-dependencies]
rand              = "0.4"
static_assertions = "0.2"

[build-dependencies]
version_check = "0.1"

[features]
serde = ["hexe_core/serde"]
simd  = ["hexe_core/simd"]
