[package]
name = "hexe_bin"
version = "0.0.5"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/hexe-rs/Hexe"
description = "A chess engine."
documentation = "https://docs.rs/hexe"
keywords = ["chess", "engine", "ai", "magic"]
include = ["Cargo.toml", "src/**/*.rs", "README*", "CHANGELOG*", "LICENSE*"]

[[bin]]
name = "hexe"
path = "src/main.rs"

[badges]
travis-ci = { repository = "hexe-rs/Hexe" }
appveyor  = { repository = "nvzqz/Hexe" }

[dependencies]
hexe = { version = "0.0.5", path = "../hexe" }

[features]
serde = ["hexe/serde"]
simd  = ["hexe/simd"]
