[package]
name = "hexe_bin"
version = "0.0.5"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/hexe-rs/Hexe"
description = "A chess engine."
documentation = "https://docs.rs/hexe"
keywords = ["chess", "engine", "ai", "magic"]
include = ["Cargo.toml", "src/**/*.rs", "README*", "CHANGELOG*", "LICENSE*"]

[[bin]]
name = "hexe"
path = "src/main.rs"

[badges]
travis-ci = { repository = "hexe-rs/Hexe" }
appveyor  = { repository = "nvzqz/Hexe" }

[dependencies.hexe]
version = "0.0.5"
path    = "../hexe"

[dependencies.clap]
version          = "2.0"
default-features = false
features         = ["color", "suggestions"]

[dependencies.env_logger]
version  = "0.5"
optional = true

[features]
default = ["log"]
serde = ["hexe/serde"]
simd  = ["hexe/simd"]
log   = ["hexe/log", "env_logger"]
