[package]
name = "hexe_core"
version = "0.0.0"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
repository = "https://github.com/hexe-rs/Hexe"
categories = ["no-std"]
description = "The core components of the hexe chess engine crate."
documentation = "https://docs.rs/hexe_core"
include = ["Cargo.toml", "src/**/*.rs", "README*", "CHANGELOG*", "LICENSE*"]

[badges]
travis-ci = { repository = "hexe-rs/Hexe" }

[dependencies]
memchr       = { version = "2.0",   default-features = false, features = ["libc"] }
serde        = { version = "1.0",   default-features = false, optional = true }
simd         = { version = "0.2",   optional = true }
uncon        = { version = "1.1.0", default-features = false }
uncon_derive = { version = "1.1.1", default-features = false }

[dev-dependencies]
rand = "0.3"
static_assertions = "0.2"

[features]
default = ["std"]

# Enables functionality that depends on the standard library
std = ["memchr/use_std", "uncon/std", "uncon_derive/std"]

# Unstable features that currently exist behind a feature gate. Any feature here
# may be removed once the underlying rust feature is stabilized.
nightly = ["try-from"]
try-from = []
