[package]
name = "hexe_core"
version = "0.0.3"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
repository = "https://github.com/hexe-rs/Hexe"
categories = ["no-std"]
description = "The core components of the hexe chess engine crate."
documentation = "https://docs.rs/hexe_core"
keywords = ["chess", "engine", "ai", "magic"]
include = ["Cargo.toml", "src/**/*.rs", "README*", "CHANGELOG*", "LICENSE*"]

[badges]
travis-ci = { repository = "hexe-rs/Hexe" }
appveyor  = { repository = "hexe-rs/Hexe" }

[dependencies]
memchr       = { version = "2.0",   default-features = false, features = ["libc"] }
uncon        = { version = "1.1.0", default-features = false }
uncon_derive = { version = "1.1.1", default-features = false }

# Optional
serde = { version = "1.0",   optional = true, default-features = false }
simd  = { version = "0.2",   optional = true }
rand  = { version = "0.4.1", optional = true, default-features = false }

[dev-dependencies]
rand = "0.4.1"
static_assertions = "0.2"

[build-dependencies]
version_check = "0.1"

[features]
default = ["std"]

# Enables functionality that depends on the standard library
std = ["memchr/use_std", "uncon/std", "uncon_derive/std"]
